Refactor application to migrate from Firebase to Convex and Clerk

--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
-NEXT_PUBLIC_API_KEY=AIzaSyAPpzN-aC0Ro06tvQY7GOlr842gdD-uUV4
-NEXT_PUBLIC_AUTH_DOMAIN=gdgoc-proj.firebaseapp.com
-NEXT_PUBLIC_PROJECT_ID=gdgoc-proj
-NEXT_PUBLIC_STORAGE_BUCKET=gdgoc-proj.firebasestorage.app
-NEXT_PUBLIC_MESSAGING_SENDER_ID=880615830538
-NEXT_PUBLIC_APP_ID=1:880615830538:web:f7da1be684ec5fc31c5bf3
-NEXT_PUBLIC_MEASUREMENT_ID=G-SPBF5S7209
 GEMINI_API_KEY=AIzaSyCxVql48NssaoL8FeoK7ihKz9rM7RONt74
+NEXT_PUBLIC_CONVEX_URL=https://good-cobra-10.convex.cloud
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y3VyaW91cy1hcGhpZC01OC5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_BfjrSWdp8INqQ2ucgDqmnK395aQSxGo4tCOU6w9Xxb
+NEXT_PUBLIC_ADMIN_UID=user_32QOGuR4s8pHIbhNXnR3n3oeEk9
