--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-GEMINI_API_KEY=AIzaSyCxVql48NssaoL8FeoK7ihKz9rM7RONt74
-NEXT_PUBLIC_CONVEX_URL=https://good-cobra-10.convex.cloud
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y3VyaW91cy1hcGhpZC01OC5jbGVyay5hY2NvdW50cy5kZXYk
-CLERK_SECRET_KEY=sk_test_BfjrSWdp8INqQ2ucgDqmnK395aQSxGo4tCOU6w9Xxb
-NEXT_PUBLIC_ADMIN_UID=user_32QOGuR4s8pHIbhNXnR3n3oeEk9
+GEMINI_API_KEY=
+NEXT_PUBLIC_CONVEX_URL=
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
+NEXT_PUBLIC_ADMIN_UID=
