--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ NEXT_PUBLIC_CONVEX_URL=
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 NEXT_PUBLIC_ADMIN_UID=
+NEXT_PUBLIC_CLERK_JWT_TEMPLATE=convex
